--- a/docs/assets/style.css
+++ b/docs/assets/style.css
@@ -1,96 +1,102 @@
+/* ======== ESTILO GENERAL DEL BODY CON ANIMACIÓN DE FONDO ======== */
 body {
-	width: 100wh;
-	height: 90vh;
-	color: #fff;
-	background: linear-gradient(-45deg, #EE7752, #E73C7E, #23A6D5, #23D5AB);
-	background-size: 400% 400%;
-	-webkit-animation: Gradient 15s ease infinite;
-	-moz-animation: Gradient 15s ease infinite;
-	animation: Gradient 15s ease infinite;
+  width: 100vw;
+  min-height: 100vh;
+  color: #fff;
+  background: linear-gradient(-45deg, #EE7752, #e73c7e, #23A6D5, #23D5AB);
+  background-size: 400% 400%;
+  -webkit-animation: Gradient 15s ease infinite;
+  -moz-animation: Gradient 15s ease infinite;
+  animation: Gradient 15s ease infinite;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: start;
+  padding-top: 50px;
+  padding-bottom: 50px;
+  text-align: center;
+  font-family: 'Open Sans', sans-serif;
 }
 
+/* ======== TITULOS PRINCIPALES SIN POSICIÓN ABSOLUTA ======== */
+h1,
+h6 {
+  font-weight: 600;
+  margin-top: 20px;
+  margin-bottom: 10px;
+}
+
+/* ======== ANIMACIÓN DE FONDO ======== */
 @-webkit-keyframes Gradient {
-	0% {
-		background-position: 0% 50%
-	}
-	50% {
-		background-position: 100% 50%
-	}
-	100% {
-		background-position: 0% 50%
-	}
+  0% { background-position: 0% 50% }
+  50% { background-position: 100% 50% }
+  100% { background-position: 0% 50% }
 }
 
 @-moz-keyframes Gradient {
-	0% {
-		background-position: 0% 50%
-	}
-	50% {
-		background-position: 100% 50%
-	}
-	100% {
-		background-position: 0% 50%
-	}
+  0% { background-position: 0% 50% }
+  50% { background-position: 100% 50% }
+  100% { background-position: 0% 50% }
 }
 
 @keyframes Gradient {
-	0% {
-		background-position: 0% 50%
-	}
-	50% {
-		background-position: 100% 50%
-	}
-	100% {
-		background-position: 0% 50%
-	}
+  0% { background-position: 0% 50% }
+  50% { background-position: 100% 50% }
+  100% { background-position: 0% 50% }
 }
 
-h1,
-h6 {
-	font-family: 'Open Sans';
-	font-weight: 300;
-	text-align: center;
-	position: absolute;
-	top: 45%;
-	right: 0;
-	left: 0;
+/* ======== BOTONES INTERACTIVOS ======== */
+.btn-outline-success {
+  color: #fff;
+  border-color: #fff;
 }
 
+.btn-outline-success:hover {
+  background-color: #28a745;
+  color: white;
+}
+
+.btn-outline-info {
+  color: #fff;
+  border-color: #17a2b8;
+}
+
+.btn-outline-info:hover {
+  background-color: #17a2b8;
+  color: white;
+}
+
+/* ======== EFECTO SHAKE SI LO UTILIZAS ======== */
 .shake {
-	animation: shake-animation 4.72s ease infinite;
-	transform-origin: 50% 50%;
-  }
-  .element {
-	margin: 0 auto;
-	width: 150px;
-	height: 150px;
-	background: red;
-  }
-  @keyframes shake-animation {
-	 0% { transform:translate(0,0) }
-	1.78571% { transform:translate(5px,0) }
-	3.57143% { transform:translate(0,0) }
-	5.35714% { transform:translate(5px,0) }
-	7.14286% { transform:translate(0,0) }
-	8.92857% { transform:translate(5px,0) }
-	10.71429% { transform:translate(0,0) }
-	100% { transform:translate(0,0) }
-  }
+  animation: shake-animation 4.72s ease infinite;
+  transform-origin: 50% 50%;
+}
 
-  .backdrop {
-	  -moz-box-shadow: 0px 6px 5px #111; 
-	  -webkit-box-shadow: 0px 6px 5px #111; 
-	  box-shadow: 0px 2px 10px #111; 
-	  -moz-border-radius:190px; 
-	  -webkit-border-radius:190px; 
-	  border-radius:190px;
-  }
+@keyframes shake-animation {
+  0% { transform: translate(0, 0) }
+  1.78571% { transform: translate(5px, 0) }
+  3.57143% { transform: translate(0, 0) }
+  5.35714% { transform: translate(5px, 0) }
+  7.14286% { transform: translate(0, 0) }
+  8.92857% { transform: translate(5px, 0) }
+  10.71429% { transform: translate(0, 0) }
+  100% { transform: translate(0, 0) }
+}
 
-  .linktree {
-	  width: 120px;
-	  height: 120px;
-	  background-image: url("https://avatars.githubusercontent.com/u/106186354?v=4");
-	  background-size: cover;
-	  background-repeat: no-repeat;
-	  background-position: 50% 50%;
-  }
+/* ======== FOTO DE PERFIL CIRCULAR CON SOMBRA ======== */
+.backdrop {
+  box-shadow: 0px 2px 10px #111;
+  border-radius: 190px;
+  overflow: hidden;
+}
+
+/* ======== IMAGEN COMO FONDO EN CÍRCULO ======== */
+.linktree {
+  width: 120px;
+  height: 120px;
+  background-image: url("https://avatars.githubusercontent.com/u/106186354?v=4");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  border-radius: 50%;
+}
